feat(Jt808ProtocolVersionDetector): DefaultJt808ProtocolVersionDetector